# acb

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  colorize-table  go.mod  go.sum  main.go  test.csv
.claude/: CLAUDE.md
.claude/skills/spreadsheets/: SKILL.md
.claude/skills/spreadsheets/scripts/: run.sh  spreadsheets.py
.github/workflows/: golangci-lint.yml  rust.yml
acb_wasm/: Cargo.toml  Makefile
acb_wasm/src/: app_shim.rs  http.rs  lib.rs  wasm_bindings.rs  wasm_rates_loader.rs
app/: approot.go
app/outfmt/: csv.go  model.go  std.go
buildutil/: find-gopath
cmd/: root.go
date/: date.go
decimal_value/: decimal_value.go
doc/: acb.1  view.sh
fx/: convert.go  data.go  io.go  model.go
js/: Makefile  package.json  pdf_text.js
log/: log.go
portfolio/: bookkeeping.go  cumulative_gains.go  io.go  model.go  render.go  summary.go
py/: .run-in-venv.sh  Makefile  acb-cmd  acb-tools  colorize-table  csv-to-xlsx.py  ensure_in_venv.py  etrade-plan-pdf-tx-extract  etrade-plan-pdf-tx-extract.py  normalize-csv-currency.py  pdf_text.py  questrade-statement-fmv.py  requirements.txt  sanitize-etrade-test-pdf.py  sanitize_config.template.toml  setup.sh  tx-export-convert  tx-export-convert.py  txlib.py
pytest/: test_tx_export_convert.py
src/: app.rs  cmd.rs  fx.rs  lib.rs  log.rs  peripheral.rs  portfolio.rs  testlib.rs  tracing.rs  util.rs
src/app/: approot.rs  config.rs  input_parse.rs  outfmt.rs
src/app/approot/: approot_common.rs  calc_approot.rs  summary_approot.rs
src/app/outfmt/: csv.rs  model.rs  text.rs
src/fx/: io.rs  model.rs
src/fx/io/: rate_loader.rs  rates_cache.rs  remote_rate_loader.rs
src/peripheral/: acb_config_cmd.rs  broker.rs  etrade_plan_pdf_tx_extract_cmd.rs  etrade_plan_pdf_tx_extract_impl.rs  excel.rs  pdf.rs  questrade_statement_fmv_impl.rs  sheet_common.rs  tx_export_convert_impl.rs
src/peripheral/broker/: broker_tx.rs  etrade.rs  file_detect.rs  fx_tracker.rs  questrade.rs  rbc_di.rs
src/portfolio/: bookkeeping.rs  csv_common.rs  cumulative_gains.rs  global_affiliate_txs.rs  io.rs  misc.rs  model.rs  render.rs  splits.rs  summary.rs  tx_utils.rs
src/portfolio/bookkeeping/: costs.rs  delta_list.rs  portfolio_status.rs  superficial_loss.rs
src/portfolio/io/: tx_csv.rs  tx_loader.rs
src/portfolio/model/: affiliate.rs  currency.rs  tx.rs  txdelta.rs
src/util/: basic.rs  date.rs  decimal.rs  http.rs  math.rs  node.rs  os.rs  py.rs  rc.rs  rw.rs  sys.rs  zip.rs
test/: AffiliatePortfolioSecurityStatuses_test.go  QT_Test_Export.xlsx  README.md  acb_app_test.go  acb_summary_test.go  acb_test.go  base_test_lib.go  coreutils_test.go  date_test.go  fx_io_test.go  io_test.go  model_test.go  portfolio_test_lib.go  sample_files_test.go  test_combined.csv  test_etrade_plan_pdf_tx_extract.py  test_tx_export_convert.py  total_cost_test.go  tx_test.go  txdelta_test.go  utils_math_test.go
tests/: etrade_plan_pdf_tx_extract_test.rs  fx_rateloader_test.rs  integrated_render_total_costs_test.rs  sample_files_test.rs  sanitize_etrade_test_pdf_test.sh  tx_export_convert_test.rs
tests/common/: mod.rs
tests/data/: QT_Test_Export.xlsx  RBC_DI_Test_Export.csv  RBC_DI_Test_Export_Errors.csv  alt-config.json  sample_csv_errors.csv  sample_csv_share_quantity_issues.csv  test_combined.csv  test_combined_text.txt  test_multi_affiliate.csv
tests/data/etrade_scenarios/2022_sample/: expected_output.csv
tests/data/etrade_scenarios/2023_sample/: expected_output.csv
tests/data/etrade_scenarios/2024_with_manual_sells/: expected_output.csv
tests/data/etrade_scenarios/parse_errors/: bad_benefits.xlsx  bad_trade_conf.txt
tests/data/questrade_scenarios/basic/: Activities_basic.xlsx
util/: assert.go  map.go  math.go  optional.go  set.go  ternary.go  timeutils.go
www/: .gitignore  Makefile  README.md  copy_system_assets.sh  eslint.config.cjs  favicon.xcf  package-lock.json  package.json  render.cjs  run_test_server.sh  tsconfig.json  vite.config.js
www/html/: index.css  index.html  index.js  sample_txs.csv
www/scripts/: gen_debug_samples_manifest.py  npm
www/server/: main.go  run_server.sh  run_test_server.sh
www/src/: acb_app.ts  acb_wasm_types.ts  app_debug.ts  basic_utils.ts  broker_convert_app.ts  debug.ts  dom_utils.ts  download_utils.ts  experiment_flags.ts  file_load.ts  file_reader.ts  github.ts  http_utils.ts  main.ts  pdf_text_util.ts  rates_cache.ts  render_table_utils.ts  result.ts  tampermonkey_gen.ts  tax_logic.ts  versions.ts  vite-url-import.d.ts
www/src/common/: acb_app_types.ts
www/src/ui_model/: acb_app_output.ts  app_input.ts  components.ts  debug.ts  error_displays.ts  file_input.ts  github.ts  info_dialogs.ts  misc.ts  model_lib.ts  summary_output.ts
www/src/vue/: AcbAppOutputViewSettings.vue  AcbCalcTabContent.vue  AccountBindingsEditor.vue  App.vue  AppHeader.vue  AppInputControls.vue  BrokerConvertConfigPanel.vue  BrokerConvertOutputArea.vue  BrokerConvertTabContent.vue  CollapsibleAcbAppOutputViewSettings.vue  CollapsibleRegion.vue  ConfigurationTabContent.vue  ConfirmDialog.vue  DataTable.vue  DebugPanel.vue  DialogShell.vue  ErrorBox.vue  FileDropArea.vue  FileDropAreaBase.vue  FileManagerDrawer.vue  InfoDialog.vue  InfoDialogBackdrop.vue  InfoDialogs.vue  MainContent.vue  OptionDialog.vue  OutputArea.vue  SecurityTablesOutput.vue  Sidebar.vue  SidebarBasicInfo.vue  SidebarInfo.vue  SidebarInfoItems.vue  SidebarInfoSection.vue  SplitRunButton.vue  SymbolRenamesEditor.vue  TabContent.vue  TampermonkeyExportDialog.vue  app_input_store.ts  broker_convert_output_store.ts  config_store.ts  confirm_dialog_store.ts  (+10 more)
www/static/: index.css  index.html
www/static/samples/: sample_txs.csv
www/templates/: error_box.ejs  header.ejs  index.ejs  info_dialogs.ejs  main_content.ejs  scripts.ejs  sidebar.ejs
www/templates/styles/: base_styles.ejs  body_styles.ejs  error_box_styles.ejs  main_content_styles.ejs  sidebar_styles.ejs
www/wasm/: Makefile  main.go
(+32 files in other folders)
