workspace = { members = ["acb_wasm"] }
[package]
name = "acb"
version = "0.0.0"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[ "surf/h1-client-rustls" ]
wasm=[]

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.80"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
json = "0.12.4"
lazy_static = "1.4.0"
regex = "1.10.4"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
surf = { version = "2.3.2", default-features = false, optional = true }
tabled = "0.15.0"
time = { version = "0.3.36", features = [ "formatting", "local-offset", "parsing", "macros" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter", "fmt", "std", "time" ] }
