workspace = { members = ["acb_wasm"] }
[package]
name = "acb"
version = "0.0.0"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "cliapp", "pdf_parse", "xlsx_read" ]
http_standalone = [ "surf/h1-client-rustls" ]
cliapp = [ "http_standalone" ]
pdf_parse = [ "pdf-extract" ]
xlsx_read = [ "office" ]
wasm=[]
testlib=[]

# Specify binaries here that have feature requirements,
# or you want to have an executable name different from
# the source file.
# Any others in src/bin will simply always be built.
[[bin]]
name = "acb"
path = "src/bin/acb.rs"
required-features = [ "cliapp" ]

[[bin]]
name = "pdf-text"
path = "src/bin/pdf_text.rs"
required-features = [ "pdf_parse" ]

[[bin]]
name = "tx-export-convert"
path = "src/bin/tx_export_convert.rs"
required-features = [ "xlsx_read" ]

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.80"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
json = "0.12.4"
lazy_static = "1.4.0"
office = { version = "0.8.1", optional = true }
pdf-extract = { version = "0.7.7", optional = true }
regex = "1.10.4"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
surf = { version = "2.3.2", default-features = false, optional = true }
tabled = "0.15.0"
time = { version = "0.3.36", features = [ "formatting", "local-offset", "parsing", "macros" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter", "fmt", "std", "time" ] }

[dev-dependencies]
acb = { path = ".", features = [ "default", "testlib" ] }