[package]
name = "acb_wasm"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
acb = { path = "../", features = [ "wasm" ], default-features = false }
async-trait = "0.1.80"
serde-wasm-bindgen = "0.6.5"
serde = "1.0.203"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Window", "RequestMode", "RequestInit", "Request", "Response"] }
